--- a/XCode/DewertOkin/DewertOkin/Presets-Reminder-Timer/Timer/Timer.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Presets-Reminder-Timer/Timer/Timer.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Timers-->
+        <!--Timer List View Controller-->
         <scene sceneID="fgN-gw-0cQ">
             <objects>
-                <viewController id="ROG-fO-02j" customClass="Timers" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ROG-fO-02j" customClass="TimerListViewController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2E1-Ps-R2l">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -38,7 +38,7 @@
                     <navigationItem key="navigationItem" id="zrS-L5-Yw1">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="xZJ-UA-QCj">
                             <connections>
-                                <segue destination="94w-4O-QUa" kind="presentation" id="dmU-zI-DxY"/>
+                                <segue destination="94w-4O-QUa" kind="presentation" identifier="TimerDetail" id="dmU-zI-DxY"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -51,10 +51,10 @@
             </objects>
             <point key="canvasLocation" x="700" y="81.409295352323838"/>
         </scene>
-        <!--Add Timer-->
+        <!--Add Timer View Controller-->
         <scene sceneID="aF3-62-lVf">
             <objects>
-                <viewController id="94w-4O-QUa" customClass="addTimer" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="94w-4O-QUa" customClass="AddTimerViewController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KiZ-Pp-lPU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
