accessory layout improved a little bit (still ongoing)

--- a/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -49,14 +50,20 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="remote" translatesAutoresizingMaskIntoConstraints="NO" id="a3x-qc-0fb">
-                                            <rect key="frame" x="16" y="11" width="128" height="127.5"/>
+                                            <rect key="frame" x="231" y="11" width="128" height="127.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="128" id="4AL-Z7-xOa"/>
                                                 <constraint firstAttribute="height" constant="127.5" id="wcj-bA-Roq"/>
                                             </constraints>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Check out this brand new Accessorie for your product!" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gP5-6t-6zs">
+                                            <rect key="frame" x="16" y="40" width="207" height="99"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Accessorie Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EoX-N1-U9T">
-                                            <rect key="frame" x="192" y="11" width="167" height="21"/>
+                                            <rect key="frame" x="16" y="11" width="207" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="a9u-2R-mDq"/>
                                             </constraints>
@@ -64,23 +71,26 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Check out this brand new Accessorie for your product!" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gP5-6t-6zs">
-                                            <rect key="frame" x="152" y="40" width="207" height="99"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="gP5-6t-6zs" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="a3x-qc-0fb" secondAttribute="trailing" constant="8" id="7OR-8P-6Q1"/>
-                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="leading" secondItem="hfI-Hw-jPQ" secondAttribute="leading" constant="16" id="JJT-PR-eDo"/>
-                                        <constraint firstAttribute="trailing" secondItem="EoX-N1-U9T" secondAttribute="trailing" constant="16" id="NXz-9D-xdh"/>
-                                        <constraint firstItem="EoX-N1-U9T" firstAttribute="top" secondItem="hfI-Hw-jPQ" secondAttribute="top" constant="11" id="XD6-no-0dl"/>
-                                        <constraint firstAttribute="bottom" secondItem="a3x-qc-0fb" secondAttribute="bottom" constant="11" id="aaa-7w-Hbe"/>
-                                        <constraint firstItem="gP5-6t-6zs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="EoX-N1-U9T" secondAttribute="bottom" constant="8" id="ibC-Wc-h1B"/>
-                                        <constraint firstAttribute="trailing" secondItem="gP5-6t-6zs" secondAttribute="trailing" constant="16" id="l3j-PP-8kg"/>
-                                        <constraint firstAttribute="bottom" secondItem="gP5-6t-6zs" secondAttribute="bottom" constant="10.5" id="nOe-Ns-Oca"/>
-                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="top" secondItem="hfI-Hw-jPQ" secondAttribute="top" constant="11" id="ntn-qT-ESO"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="centerY" secondItem="gP5-6t-6zs" secondAttribute="centerY" constant="-14.75" id="3jQ-gQ-fu8"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="leading" secondItem="gP5-6t-6zs" secondAttribute="trailing" constant="8" id="5ew-Di-IJf"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="leading" secondItem="EoX-N1-U9T" secondAttribute="trailing" constant="8" id="6Iu-JT-163"/>
+                                        <constraint firstItem="gP5-6t-6zs" firstAttribute="leading" secondItem="hfI-Hw-jPQ" secondAttribute="leadingMargin" id="8th-9x-pYl"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="top" secondItem="hfI-Hw-jPQ" secondAttribute="topMargin" id="Ils-XR-tD5"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="leading" secondItem="gP5-6t-6zs" secondAttribute="trailing" constant="8" symbolic="YES" id="KMI-8W-XIE"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="a3x-qc-0fb" secondAttribute="bottom" constant="0.5" id="S9P-i1-OF9"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="trailing" secondItem="hfI-Hw-jPQ" secondAttribute="trailingMargin" id="SKA-mK-zs1"/>
+                                        <constraint firstItem="EoX-N1-U9T" firstAttribute="top" secondItem="hfI-Hw-jPQ" secondAttribute="topMargin" id="Tcq-oO-orh"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="trailing" secondItem="hfI-Hw-jPQ" secondAttribute="trailingMargin" id="Vln-ZT-v18"/>
+                                        <constraint firstItem="EoX-N1-U9T" firstAttribute="leading" secondItem="hfI-Hw-jPQ" secondAttribute="leadingMargin" id="W9u-6t-nEP"/>
+                                        <constraint firstItem="gP5-6t-6zs" firstAttribute="top" secondItem="EoX-N1-U9T" secondAttribute="bottom" constant="8" id="dSy-bL-ufa"/>
+                                        <constraint firstItem="gP5-6t-6zs" firstAttribute="top" secondItem="EoX-N1-U9T" secondAttribute="bottom" constant="8" id="iZc-Vb-v0Z"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="top" secondItem="EoX-N1-U9T" secondAttribute="top" id="nbY-tm-1x6"/>
+                                        <constraint firstItem="gP5-6t-6zs" firstAttribute="bottom" secondItem="hfI-Hw-jPQ" secondAttribute="bottomMargin" id="sp1-jt-eN7"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="leading" secondItem="EoX-N1-U9T" secondAttribute="trailing" constant="8" symbolic="YES" id="tJ1-Po-Oxx"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="top" secondItem="hfI-Hw-jPQ" secondAttribute="topMargin" id="wid-X2-XvY"/>
+                                        <constraint firstItem="a3x-qc-0fb" firstAttribute="leading" secondItem="EoX-N1-U9T" secondAttribute="trailing" constant="8" id="xy5-Wn-ej0"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
