Bug Fix, Success View

--- a/XCode/DewertOkin/DewertOkin/Pairing Process/BluetoothPairing.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Pairing Process/BluetoothPairing.storyboard
@@ -13,7 +13,7 @@
         <!--Bluetooth Pairing View Controller-->
         <scene sceneID="pdT-nj-vL6">
             <objects>
-                <viewController id="f7d-qy-B5L" customClass="BluetoothPairingViewController" customModule="DewertOkin" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PairingDeviceList" id="f7d-qy-B5L" customClass="BluetoothPairingViewController" customModule="DewertOkin" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FRc-o2-RbW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -68,6 +68,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jPd-4n-nd5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-268" y="118.29085457271366"/>
+        </scene>
+        <!--Bluetooth Pairing View Controller-->
+        <scene sceneID="HJx-Oe-jZ7">
+            <objects>
+                <viewController storyboardIdentifier="PairingSuccess" id="ctc-Sd-Oce" customClass="BluetoothPairingViewController" customModule="DewertOkin" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="N4w-vd-Gwi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Success!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vmk-Zg-5RA">
+                                <rect key="frame" x="152" y="323" width="70" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Vmk-Zg-5RA" secondAttribute="height" multiplier="10:3" id="s8K-Z0-q8O"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Vmk-Zg-5RA" firstAttribute="leading" secondItem="5Iu-px-na6" secondAttribute="leading" constant="152" id="9V9-Na-1y8"/>
+                            <constraint firstItem="Vmk-Zg-5RA" firstAttribute="top" secondItem="5Iu-px-na6" secondAttribute="top" constant="303" id="oTX-hI-Svc"/>
+                            <constraint firstItem="5Iu-px-na6" firstAttribute="trailing" secondItem="Vmk-Zg-5RA" secondAttribute="trailing" constant="153" id="t4C-ws-kTV"/>
+                            <constraint firstItem="5Iu-px-na6" firstAttribute="bottom" secondItem="Vmk-Zg-5RA" secondAttribute="bottom" constant="323" id="t6y-9Y-SKq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5Iu-px-na6"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vV6-Rm-ojR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="550" y="118"/>
         </scene>
     </scenes>
 </document>
