--- a/XCode/DewertOkin/DewertOkin/Pairing Process/BluetoothPairing.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Pairing Process/BluetoothPairing.storyboard
@@ -20,20 +20,20 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3lV-v7-JMr">
                                 <rect key="frame" x="37" y="487" width="301" height="63"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="3lV-v7-JMr" secondAttribute="height" multiplier="43:9" id="6tN-tX-gD7"/>
                                 </constraints>
-                                <state key="normal" title="Connect"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Connect">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="connect:" destination="f7d-qy-B5L" eventType="touchUpInside" id="8qb-Gn-MXZ"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Available Devices" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4b2-LS-Edn">
                                 <rect key="frame" x="121" y="104" width="133" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="4b2-LS-Edn" secondAttribute="height" multiplier="19:3" id="Zr9-TE-Bey"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
